--- a/profile/readme
+++ b/profile/readme
@@ -1,6 +1,6 @@
 # 🚀 Rom Syndicate
 
-![Banner](./Img/BannerGithub.png)
+![Banner](./img/BannerGithub.png)
 
 **Bem-vindos à Rom Syndicate!** Somos um grupo focado na tradução e modificação de jogos clássicos, com o objetivo de tornar títulos memoráveis acessíveis a todos os jogadores, respeitando sempre a obra original.
 
@@ -43,3 +43,4 @@ Estamos sempre à procura de entusiastas, sejam tradutores, revisores ou hackers
 ---
 
 *“Preservando a história dos videogames, uma string por vez.”*
+
